syntax = "proto3";

package messagequeue.meta;

option java_package = "com.arnold.msg.proto.meta";
option java_outer_classname = "MetaServiceProto";
option java_multiple_files = true;

import "common.proto";

service MetaService {
    rpc CreateQueue(CreateQueueRequest) returns (CreateQueueResponse);
    rpc GetQueue(GetQueueRequest) returns (GetQueueResponse);
    rpc AssignDataServer(AssignDataServerRequest) returns (AssignDataServerResponse);
}

message CreateQueueRequest {
    string queue_name = 1;
    int32 partition_count = 2;
    int32 replication_factor = 3;
}

message CreateQueueResponse {
    common.Response base = 1;
    common.QueueInfo queue_info = 2;
}

message GetQueueRequest {
    string queue_name = 1;
}

message GetQueueResponse {
    common.Response base = 1;
    common.QueueInfo queue_info = 2;
}

message AssignDataServerRequest {
    string queue_name = 1;
    string client_type = 2;
    string partition_key = 3;
}

message AssignDataServerResponse {
    common.Response base = 1;
    repeated common.DataServer data_servers = 2;
    string partition_id = 3;
}